// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select calls onChange callback when an item is selected using multiselect 1`] = `
<div>
  <div
    class="form-group hide"
    tabindex="0"
  >
    <select
      aria-errormessage="undefined_fieldError"
      class="form-control form-control"
      hidden=""
      multiple=""
      size="7"
    >
      <option
        value="item7"
      >
        label7
      </option>
    </select>
    <div
      class="form-builder-select-field input-group-container"
      style=""
    >
      <div
        aria-labelledby="undefined_item7_optionLabel undefined_selectedLabel undefined_fieldLabel"
        class="form-control results-chosen select-field-trigger multiple-label-list"
        tabindex="0"
      >
        <li>
          <span
            class="label ddm-select-option-label label-dismissible label-secondary"
            value="item7"
          >
            <span
              class="label-item label-item-expand"
            >
              label7
            </span>
            <span
              class="label-item label-item-after"
            >
              <button
                aria-labelledby="undefined_removeLabel undefined_item7_optionLabel undefined_fieldLabel"
                class="close"
                data-testid="closeButtonitem7"
                type="button"
              >
                <svg
                  class="lexicon-icon lexicon-icon-times"
                  role="presentation"
                >
                  <use
                    xlink:href="#times"
                  />
                </svg>
              </button>
            </span>
          </span>
          <span
            class="sr-only"
            id="undefined_item7_optionLabel"
          >
            label7
          </span>
        </li>
        <a
          class="select-arrow-down-container"
        >
          <svg
            class="lexicon-icon lexicon-icon-caret-double"
            role="presentation"
          >
            <use
              xlink:href="#caret-double"
            />
          </svg>
        </a>
      </div>
      <span
        class="sr-only"
        id="undefined_selectedLabel"
      >
        selected
      </span>
      <span
        class="sr-only"
        id="undefined_removeLabel"
      >
        remove
      </span>
    </div>
    <div>
      <div
        class="dropdown-menu ddm-btn-full ddm-select-dropdown show"
        style="left: -999px; top: -995px;"
      >
        <ul
          class="list-unstyled"
        >
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_item1_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-0"
              label="label1"
            >
              <div
                class="custom-control custom-checkbox"
              >
                <label>
                  <input
                    aria-errormessage="undefined_fieldError"
                    aria-labelledby="undefined_item1_fieldLabel undefined_fieldLabel"
                    class="custom-control-input"
                    data-testid="labelItem-item1"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      label1
                    </span>
                  </span>
                </label>
              </div>
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_item1_fieldLabel"
          >
            label1
          </span>
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_item2_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-1"
              label="label2"
            >
              <div
                class="custom-control custom-checkbox"
              >
                <label>
                  <input
                    aria-errormessage="undefined_fieldError"
                    aria-labelledby="undefined_item2_fieldLabel undefined_fieldLabel"
                    class="custom-control-input"
                    data-testid="labelItem-item2"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      label2
                    </span>
                  </span>
                </label>
              </div>
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_item2_fieldLabel"
          >
            label2
          </span>
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_item3_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-2"
              label="label3"
            >
              <div
                class="custom-control custom-checkbox"
              >
                <label>
                  <input
                    aria-errormessage="undefined_fieldError"
                    aria-labelledby="undefined_item3_fieldLabel undefined_fieldLabel"
                    class="custom-control-input"
                    data-testid="labelItem-item3"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      label3
                    </span>
                  </span>
                </label>
              </div>
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_item3_fieldLabel"
          >
            label3
          </span>
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_item4_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-3"
              label="label4"
            >
              <div
                class="custom-control custom-checkbox"
              >
                <label>
                  <input
                    aria-errormessage="undefined_fieldError"
                    aria-labelledby="undefined_item4_fieldLabel undefined_fieldLabel"
                    class="custom-control-input"
                    data-testid="labelItem-item4"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      label4
                    </span>
                  </span>
                </label>
              </div>
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_item4_fieldLabel"
          >
            label4
          </span>
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_item5_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-4"
              label="label5"
            >
              <div
                class="custom-control custom-checkbox"
              >
                <label>
                  <input
                    aria-errormessage="undefined_fieldError"
                    aria-labelledby="undefined_item5_fieldLabel undefined_fieldLabel"
                    class="custom-control-input"
                    data-testid="labelItem-item5"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      label5
                    </span>
                  </span>
                </label>
              </div>
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_item5_fieldLabel"
          >
            label5
          </span>
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_item6_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-5"
              label="label6"
            >
              <div
                class="custom-control custom-checkbox"
              >
                <label>
                  <input
                    aria-errormessage="undefined_fieldError"
                    aria-labelledby="undefined_item6_fieldLabel undefined_fieldLabel"
                    class="custom-control-input"
                    data-testid="labelItem-item6"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      label6
                    </span>
                  </span>
                </label>
              </div>
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_item6_fieldLabel"
          >
            label6
          </span>
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_item7_fieldLabel undefined_fieldLabel"
              aria-selected="true"
              class="dropdown-item"
              data-testid="dropdownItem-6"
              label="label7"
            >
              <div
                class="custom-control custom-checkbox"
              >
                <label>
                  <input
                    aria-errormessage="undefined_fieldError"
                    aria-labelledby="undefined_item7_fieldLabel undefined_fieldLabel"
                    class="custom-control-input"
                    data-testid="labelItem-item7"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      label7
                    </span>
                  </span>
                </label>
              </div>
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_item7_fieldLabel"
          >
            label7
          </span>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select filters according to the input and calls onChange callback when an item is selected using search 1`] = `
<div>
  <div
    class="form-group hide"
    tabindex="0"
  >
    <select
      aria-errormessage="undefined_fieldError"
      class="form-control form-control"
      hidden=""
      multiple=""
      size="12"
    >
      <option
        disabled=""
        value=""
      >
        undefined
      </option>
    </select>
    <div
      class="form-builder-select-field input-group-container"
      style=""
    >
      <div
        aria-labelledby="undefined_placeholderLabel undefined_fieldLabel"
        class="form-control results-chosen select-field-trigger multiple-label-list"
        tabindex="0"
      >
        <div
          class="option-selected option-selected-placeholder"
          id="undefined_placeholderLabel"
        >
          choose-options
        </div>
        <a
          class="select-arrow-down-container"
        >
          <svg
            class="lexicon-icon lexicon-icon-caret-double"
            role="presentation"
          >
            <use
              xlink:href="#caret-double"
            />
          </svg>
        </a>
      </div>
      <span
        class="sr-only"
        id="undefined_selectedLabel"
      >
        selected
      </span>
      <span
        class="sr-only"
        id="undefined_removeLabel"
      >
        remove
      </span>
    </div>
    <div>
      <div
        class="dropdown-menu ddm-btn-full ddm-select-dropdown show"
        style="left: -999px; top: -995px;"
      >
        <form
          class=""
        >
          <div
            class="dropdown-section"
          >
            <div
              class="input-group input-group-sm"
            >
              <div
                class="input-group-item"
              >
                <input
                  class="form-control input-group-inset input-group-inset-after"
                  type="text"
                  value="label1"
                />
                <span
                  class="input-group-inset-item input-group-inset-item-after"
                >
                  <button
                    class="btn btn-unstyled"
                    type="button"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-search"
                      role="presentation"
                    >
                      <use
                        xlink:href="#search"
                      />
                    </svg>
                  </button>
                </span>
              </div>
            </div>
          </div>
        </form>
        <ul
          class="list-unstyled"
        >
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_null_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-0"
              label="choose-an-option"
            >
              <div
                class="custom-control custom-checkbox"
              >
                <label>
                  <input
                    aria-errormessage="undefined_fieldError"
                    aria-labelledby="undefined_null_fieldLabel undefined_fieldLabel"
                    class="custom-control-input"
                    data-testid="labelItem-null"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      choose-an-option
                    </span>
                  </span>
                </label>
              </div>
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_null_fieldLabel"
          >
            choose-an-option
          </span>
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_item1_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-1"
              label="label1"
            >
              <div
                class="custom-control custom-checkbox"
              >
                <label>
                  <input
                    aria-errormessage="undefined_fieldError"
                    aria-labelledby="undefined_item1_fieldLabel undefined_fieldLabel"
                    class="custom-control-input"
                    data-testid="labelItem-item1"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      label1
                    </span>
                  </span>
                </label>
              </div>
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_item1_fieldLabel"
          >
            label1
          </span>
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_item10_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-2"
              label="label10"
            >
              <div
                class="custom-control custom-checkbox"
              >
                <label>
                  <input
                    aria-errormessage="undefined_fieldError"
                    aria-labelledby="undefined_item10_fieldLabel undefined_fieldLabel"
                    class="custom-control-input"
                    data-testid="labelItem-item10"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      label10
                    </span>
                  </span>
                </label>
              </div>
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_item10_fieldLabel"
          >
            label10
          </span>
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_item11_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-3"
              label="label11"
            >
              <div
                class="custom-control custom-checkbox"
              >
                <label>
                  <input
                    aria-errormessage="undefined_fieldError"
                    aria-labelledby="undefined_item11_fieldLabel undefined_fieldLabel"
                    class="custom-control-input"
                    data-testid="labelItem-item11"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      label11
                    </span>
                  </span>
                </label>
              </div>
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_item11_fieldLabel"
          >
            label11
          </span>
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_item12_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-4"
              label="label12"
            >
              <div
                class="custom-control custom-checkbox"
              >
                <label>
                  <input
                    aria-errormessage="undefined_fieldError"
                    aria-labelledby="undefined_item12_fieldLabel undefined_fieldLabel"
                    class="custom-control-input"
                    data-testid="labelItem-item12"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      label12
                    </span>
                  </span>
                </label>
              </div>
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_item12_fieldLabel"
          >
            label12
          </span>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select has a help text 1`] = `
<div>
  <div
    class="form-group hide"
    tabindex="0"
  >
    <select
      aria-errormessage="undefined_fieldError"
      class="form-control form-control"
      hidden=""
      multiple=""
    >
      <option
        disabled=""
        value=""
      >
        undefined
      </option>
    </select>
    <div
      class="form-builder-select-field input-group-container"
    >
      <div
        aria-labelledby="undefined_placeholderLabel undefined_fieldLabel"
        class="form-control results-chosen select-field-trigger"
        tabindex="0"
      >
        <div
          class="option-selected option-selected-placeholder"
          id="undefined_placeholderLabel"
        >
          choose-an-option
        </div>
        <a
          class="select-arrow-down-container"
        >
          <svg
            class="lexicon-icon lexicon-icon-caret-double"
            role="presentation"
          >
            <use
              xlink:href="#caret-double"
            />
          </svg>
        </a>
      </div>
      <span
        class="sr-only"
        id="undefined_selectedLabel"
      >
        selected
      </span>
      <span
        class="sr-only"
        id="undefined_removeLabel"
      >
        remove
      </span>
    </div>
    <div>
      <div
        class="dropdown-menu ddm-btn-full ddm-select-dropdown"
      >
        <ul
          class="list-unstyled"
        >
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_null_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-0"
              label="choose-an-option"
            >
              choose-an-option
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_null_fieldLabel"
          >
            choose-an-option
          </span>
        </ul>
      </div>
    </div>
    <span
      class="form-text"
      id="undefined_fieldTip"
    >
      Type something
    </span>
  </div>
</div>
`;

exports[`Select has a key 1`] = `
<div>
  <div
    class="form-group hide"
    tabindex="0"
  >
    <select
      aria-errormessage="undefined_fieldError"
      class="form-control form-control"
      hidden=""
      multiple=""
    >
      <option
        disabled=""
        value=""
      >
        undefined
      </option>
    </select>
    <div
      class="form-builder-select-field input-group-container"
    >
      <div
        aria-labelledby="undefined_placeholderLabel undefined_fieldLabel"
        class="form-control results-chosen select-field-trigger"
        tabindex="0"
      >
        <div
          class="option-selected option-selected-placeholder"
          id="undefined_placeholderLabel"
        >
          choose-an-option
        </div>
        <a
          class="select-arrow-down-container"
        >
          <svg
            class="lexicon-icon lexicon-icon-caret-double"
            role="presentation"
          >
            <use
              xlink:href="#caret-double"
            />
          </svg>
        </a>
      </div>
      <span
        class="sr-only"
        id="undefined_selectedLabel"
      >
        selected
      </span>
      <span
        class="sr-only"
        id="undefined_removeLabel"
      >
        remove
      </span>
    </div>
    <div>
      <div
        class="dropdown-menu ddm-btn-full ddm-select-dropdown"
      >
        <ul
          class="list-unstyled"
        >
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_null_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-0"
              label="choose-an-option"
            >
              choose-an-option
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_null_fieldLabel"
          >
            choose-an-option
          </span>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select has a label 1`] = `
<div>
  <div
    class="form-group hide"
  >
    <label
      aria-labelledby="undefined_fieldLabelHidden"
      class="ddm-label"
      id="undefined_fieldLabel"
      tabindex="0"
    >
      label
    </label>
    <select
      aria-errormessage="undefined_fieldError"
      class="form-control form-control"
      hidden=""
      multiple=""
    >
      <option
        disabled=""
        value=""
      >
        undefined
      </option>
    </select>
    <div
      class="form-builder-select-field input-group-container"
    >
      <div
        aria-labelledby="undefined_placeholderLabel undefined_fieldLabel"
        class="form-control results-chosen select-field-trigger"
        tabindex="0"
      >
        <div
          class="option-selected option-selected-placeholder"
          id="undefined_placeholderLabel"
        >
          choose-an-option
        </div>
        <a
          class="select-arrow-down-container"
        >
          <svg
            class="lexicon-icon lexicon-icon-caret-double"
            role="presentation"
          >
            <use
              xlink:href="#caret-double"
            />
          </svg>
        </a>
      </div>
      <span
        class="sr-only"
        id="undefined_selectedLabel"
      >
        selected
      </span>
      <span
        class="sr-only"
        id="undefined_removeLabel"
      >
        remove
      </span>
    </div>
    <div>
      <div
        class="dropdown-menu ddm-btn-full ddm-select-dropdown"
      >
        <ul
          class="list-unstyled"
        >
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_null_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-0"
              label="choose-an-option"
            >
              choose-an-option
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_null_fieldLabel"
          >
            choose-an-option
          </span>
        </ul>
      </div>
    </div>
    <span
      class="sr-only"
      id="undefined_fieldLabelHidden"
    >
      label
    </span>
  </div>
</div>
`;

exports[`Select has a placeholder 1`] = `
<div>
  <div
    class="form-group hide"
    tabindex="0"
  >
    <select
      aria-errormessage="undefined_fieldError"
      class="form-control form-control"
      hidden=""
      multiple=""
    >
      <option
        disabled=""
        value=""
      >
        undefined
      </option>
    </select>
    <div
      class="form-builder-select-field input-group-container"
    >
      <div
        aria-labelledby="undefined_placeholderLabel undefined_fieldLabel"
        class="form-control results-chosen select-field-trigger"
        tabindex="0"
      >
        <div
          class="option-selected option-selected-placeholder"
          id="undefined_placeholderLabel"
        >
          choose-an-option
        </div>
        <a
          class="select-arrow-down-container"
        >
          <svg
            class="lexicon-icon lexicon-icon-caret-double"
            role="presentation"
          >
            <use
              xlink:href="#caret-double"
            />
          </svg>
        </a>
      </div>
      <span
        class="sr-only"
        id="undefined_selectedLabel"
      >
        selected
      </span>
      <span
        class="sr-only"
        id="undefined_removeLabel"
      >
        remove
      </span>
    </div>
    <div>
      <div
        class="dropdown-menu ddm-btn-full ddm-select-dropdown"
      >
        <ul
          class="list-unstyled"
        >
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_null_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-0"
              label="choose-an-option"
            >
              choose-an-option
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_null_fieldLabel"
          >
            choose-an-option
          </span>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select has a predefinedValue 1`] = `
<div>
  <div
    class="form-group hide"
    tabindex="0"
  >
    <select
      aria-errormessage="undefined_fieldError"
      class="form-control form-control"
      hidden=""
      multiple=""
    >
      <option
        disabled=""
        value=""
      >
        undefined
      </option>
    </select>
    <div
      class="form-builder-select-field input-group-container"
    >
      <div
        aria-labelledby="undefined_placeholderLabel undefined_fieldLabel"
        class="form-control results-chosen select-field-trigger"
        tabindex="0"
      >
        <div
          class="option-selected option-selected-placeholder"
          id="undefined_placeholderLabel"
        >
          choose-an-option
        </div>
        <a
          class="select-arrow-down-container"
        >
          <svg
            class="lexicon-icon lexicon-icon-caret-double"
            role="presentation"
          >
            <use
              xlink:href="#caret-double"
            />
          </svg>
        </a>
      </div>
      <span
        class="sr-only"
        id="undefined_selectedLabel"
      >
        selected
      </span>
      <span
        class="sr-only"
        id="undefined_removeLabel"
      >
        remove
      </span>
    </div>
    <div>
      <div
        class="dropdown-menu ddm-btn-full ddm-select-dropdown"
      >
        <ul
          class="list-unstyled"
        >
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_null_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-0"
              label="choose-an-option"
            >
              choose-an-option
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_null_fieldLabel"
          >
            choose-an-option
          </span>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select has a value 1`] = `
<div>
  <div
    class="form-group hide"
    tabindex="0"
  >
    <select
      aria-errormessage="undefined_fieldError"
      class="form-control form-control"
      hidden=""
      multiple=""
    >
      <option
        disabled=""
        value=""
      >
        undefined
      </option>
    </select>
    <div
      class="form-builder-select-field input-group-container"
    >
      <div
        aria-labelledby="undefined_placeholderLabel undefined_fieldLabel"
        class="form-control results-chosen select-field-trigger"
        tabindex="0"
      >
        <div
          class="option-selected option-selected-placeholder"
          id="undefined_placeholderLabel"
        >
          choose-an-option
        </div>
        <a
          class="select-arrow-down-container"
        >
          <svg
            class="lexicon-icon lexicon-icon-caret-double"
            role="presentation"
          >
            <use
              xlink:href="#caret-double"
            />
          </svg>
        </a>
      </div>
      <span
        class="sr-only"
        id="undefined_selectedLabel"
      >
        selected
      </span>
      <span
        class="sr-only"
        id="undefined_removeLabel"
      >
        remove
      </span>
    </div>
    <div>
      <div
        class="dropdown-menu ddm-btn-full ddm-select-dropdown"
      >
        <ul
          class="list-unstyled"
        >
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_null_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-0"
              label="choose-an-option"
            >
              choose-an-option
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_null_fieldLabel"
          >
            choose-an-option
          </span>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select has an id 1`] = `
<div>
  <div
    class="form-group hide"
    tabindex="0"
  >
    <select
      aria-errormessage="undefined_fieldError"
      class="form-control form-control"
      hidden=""
      multiple=""
    >
      <option
        disabled=""
        value=""
      >
        undefined
      </option>
    </select>
    <div
      class="form-builder-select-field input-group-container"
    >
      <div
        aria-labelledby="undefined_placeholderLabel undefined_fieldLabel"
        class="form-control results-chosen select-field-trigger"
        id="Id"
        tabindex="0"
      >
        <div
          class="option-selected option-selected-placeholder"
          id="undefined_placeholderLabel"
        >
          choose-an-option
        </div>
        <a
          class="select-arrow-down-container"
        >
          <svg
            class="lexicon-icon lexicon-icon-caret-double"
            role="presentation"
          >
            <use
              xlink:href="#caret-double"
            />
          </svg>
        </a>
      </div>
      <span
        class="sr-only"
        id="undefined_selectedLabel"
      >
        selected
      </span>
      <span
        class="sr-only"
        id="undefined_removeLabel"
      >
        remove
      </span>
    </div>
    <div>
      <div
        class="dropdown-menu ddm-btn-full ddm-select-dropdown"
      >
        <ul
          class="list-unstyled"
        >
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_null_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-0"
              label="choose-an-option"
            >
              choose-an-option
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_null_fieldLabel"
          >
            choose-an-option
          </span>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select has class dropdown-opened when it's opened 1`] = `
<div>
  <div
    class="form-group hide"
    tabindex="0"
  >
    <select
      aria-errormessage="undefined_fieldError"
      class="form-control form-control"
      hidden=""
      multiple=""
    >
      <option
        disabled=""
        value=""
      >
        undefined
      </option>
    </select>
    <div
      class="form-builder-select-field input-group-container"
    >
      <div
        aria-labelledby="undefined_placeholderLabel undefined_fieldLabel"
        class="form-control results-chosen select-field-trigger"
        tabindex="0"
      >
        <div
          class="option-selected option-selected-placeholder"
          id="undefined_placeholderLabel"
        >
          choose-an-option
        </div>
        <a
          class="select-arrow-down-container"
        >
          <svg
            class="lexicon-icon lexicon-icon-caret-double"
            role="presentation"
          >
            <use
              xlink:href="#caret-double"
            />
          </svg>
        </a>
      </div>
      <span
        class="sr-only"
        id="undefined_selectedLabel"
      >
        selected
      </span>
      <span
        class="sr-only"
        id="undefined_removeLabel"
      >
        remove
      </span>
    </div>
    <div>
      <div
        class="dropdown-menu ddm-btn-full ddm-select-dropdown"
      >
        <ul
          class="list-unstyled"
        >
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_null_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-0"
              label="choose-an-option"
            >
              choose-an-option
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_null_fieldLabel"
          >
            choose-an-option
          </span>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select is closed by default 1`] = `
<div>
  <div
    class="form-group hide"
    tabindex="0"
  >
    <select
      aria-errormessage="undefined_fieldError"
      class="form-control form-control"
      hidden=""
      multiple=""
    >
      <option
        disabled=""
        value=""
      >
        undefined
      </option>
    </select>
    <div
      class="form-builder-select-field input-group-container"
    >
      <div
        aria-labelledby="undefined_placeholderLabel undefined_fieldLabel"
        class="form-control results-chosen select-field-trigger"
        tabindex="0"
      >
        <div
          class="option-selected option-selected-placeholder"
          id="undefined_placeholderLabel"
        >
          choose-an-option
        </div>
        <a
          class="select-arrow-down-container"
        >
          <svg
            class="lexicon-icon lexicon-icon-caret-double"
            role="presentation"
          >
            <use
              xlink:href="#caret-double"
            />
          </svg>
        </a>
      </div>
      <span
        class="sr-only"
        id="undefined_selectedLabel"
      >
        selected
      </span>
      <span
        class="sr-only"
        id="undefined_removeLabel"
      >
        remove
      </span>
    </div>
    <div>
      <div
        class="dropdown-menu ddm-btn-full ddm-select-dropdown"
      >
        <ul
          class="list-unstyled"
        >
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_null_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-0"
              label="choose-an-option"
            >
              choose-an-option
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_null_fieldLabel"
          >
            choose-an-option
          </span>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select is not required 1`] = `
<div>
  <div
    class="form-group hide"
    tabindex="0"
  >
    <select
      aria-errormessage="undefined_fieldError"
      class="form-control form-control"
      hidden=""
      multiple=""
    >
      <option
        disabled=""
        value=""
      >
        undefined
      </option>
    </select>
    <div
      class="form-builder-select-field input-group-container"
    >
      <div
        aria-labelledby="undefined_placeholderLabel undefined_fieldLabel"
        class="form-control results-chosen select-field-trigger"
        tabindex="0"
      >
        <div
          class="option-selected option-selected-placeholder"
          id="undefined_placeholderLabel"
        >
          choose-an-option
        </div>
        <a
          class="select-arrow-down-container"
        >
          <svg
            class="lexicon-icon lexicon-icon-caret-double"
            role="presentation"
          >
            <use
              xlink:href="#caret-double"
            />
          </svg>
        </a>
      </div>
      <span
        class="sr-only"
        id="undefined_selectedLabel"
      >
        selected
      </span>
      <span
        class="sr-only"
        id="undefined_removeLabel"
      >
        remove
      </span>
    </div>
    <div>
      <div
        class="dropdown-menu ddm-btn-full ddm-select-dropdown"
      >
        <ul
          class="list-unstyled"
        >
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_null_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-0"
              label="choose-an-option"
            >
              choose-an-option
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_null_fieldLabel"
          >
            choose-an-option
          </span>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select puts an asterisk when field is required 1`] = `
<div>
  <div
    class="form-group hide"
  >
    <label
      aria-labelledby="undefined_fieldLabelHidden undefined_fieldRequired"
      class="ddm-label"
      id="undefined_fieldLabel"
      tabindex="0"
    >
      This is the label
      <span
        class="reference-mark"
      >
        <svg
          class="lexicon-icon lexicon-icon-asterisk"
          role="presentation"
        >
          <use
            xlink:href="#asterisk"
          />
        </svg>
      </span>
      <span
        class="sr-only"
        id="undefined_fieldRequired"
      >
        required
      </span>
    </label>
    <select
      aria-errormessage="undefined_fieldError"
      class="form-control form-control"
      hidden=""
      multiple=""
      required=""
    >
      <option
        disabled=""
        value=""
      >
        undefined
      </option>
    </select>
    <div
      class="form-builder-select-field input-group-container"
    >
      <div
        aria-labelledby="undefined_placeholderLabel undefined_fieldLabel"
        class="form-control results-chosen select-field-trigger"
        tabindex="0"
      >
        <div
          class="option-selected option-selected-placeholder"
          id="undefined_placeholderLabel"
        >
          choose-an-option
        </div>
        <a
          class="select-arrow-down-container"
        >
          <svg
            class="lexicon-icon lexicon-icon-caret-double"
            role="presentation"
          >
            <use
              xlink:href="#caret-double"
            />
          </svg>
        </a>
      </div>
      <span
        class="sr-only"
        id="undefined_selectedLabel"
      >
        selected
      </span>
      <span
        class="sr-only"
        id="undefined_removeLabel"
      >
        remove
      </span>
    </div>
    <div>
      <div
        class="dropdown-menu ddm-btn-full ddm-select-dropdown"
      >
        <ul
          class="list-unstyled"
        >
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_null_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-0"
              label="choose-an-option"
            >
              choose-an-option
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_null_fieldLabel"
          >
            choose-an-option
          </span>
        </ul>
      </div>
    </div>
    <span
      class="sr-only"
      id="undefined_fieldLabelHidden"
    >
      This is the label
    </span>
  </div>
</div>
`;

exports[`Select renders Label if showLabel is true 1`] = `
<div>
  <div
    class="form-group hide"
  >
    <label
      aria-labelledby="undefined_fieldLabelHidden"
      class="ddm-label"
      id="undefined_fieldLabel"
      tabindex="0"
    >
      text
    </label>
    <select
      aria-errormessage="undefined_fieldError"
      class="form-control form-control"
      hidden=""
      multiple=""
    >
      <option
        disabled=""
        value=""
      >
        undefined
      </option>
    </select>
    <div
      class="form-builder-select-field input-group-container"
    >
      <div
        aria-labelledby="undefined_placeholderLabel undefined_fieldLabel"
        class="form-control results-chosen select-field-trigger"
        tabindex="0"
      >
        <div
          class="option-selected option-selected-placeholder"
          id="undefined_placeholderLabel"
        >
          choose-an-option
        </div>
        <a
          class="select-arrow-down-container"
        >
          <svg
            class="lexicon-icon lexicon-icon-caret-double"
            role="presentation"
          >
            <use
              xlink:href="#caret-double"
            />
          </svg>
        </a>
      </div>
      <span
        class="sr-only"
        id="undefined_selectedLabel"
      >
        selected
      </span>
      <span
        class="sr-only"
        id="undefined_removeLabel"
      >
        remove
      </span>
    </div>
    <div>
      <div
        class="dropdown-menu ddm-btn-full ddm-select-dropdown"
      >
        <ul
          class="list-unstyled"
        >
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_null_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-0"
              label="choose-an-option"
            >
              choose-an-option
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_null_fieldLabel"
          >
            choose-an-option
          </span>
        </ul>
      </div>
    </div>
    <span
      class="sr-only"
      id="undefined_fieldLabelHidden"
    >
      text
    </span>
  </div>
</div>
`;

exports[`Select renders no options when options come empty 1`] = `
<div>
  <div
    class="form-group hide"
    tabindex="0"
  >
    <select
      aria-errormessage="undefined_fieldError"
      class="form-control form-control"
      hidden=""
      multiple=""
    >
      <option
        disabled=""
        value=""
      >
        undefined
      </option>
    </select>
    <div
      class="form-builder-select-field input-group-container"
    >
      <div
        aria-labelledby="undefined_placeholderLabel undefined_fieldLabel"
        class="form-control results-chosen select-field-trigger"
        tabindex="0"
      >
        <div
          class="option-selected option-selected-placeholder"
          id="undefined_placeholderLabel"
        >
          choose-an-option
        </div>
        <a
          class="select-arrow-down-container"
        >
          <svg
            class="lexicon-icon lexicon-icon-caret-double"
            role="presentation"
          >
            <use
              xlink:href="#caret-double"
            />
          </svg>
        </a>
      </div>
      <span
        class="sr-only"
        id="undefined_selectedLabel"
      >
        selected
      </span>
      <span
        class="sr-only"
        id="undefined_removeLabel"
      >
        remove
      </span>
    </div>
    <div>
      <div
        class="dropdown-menu ddm-btn-full ddm-select-dropdown"
      >
        <ul
          class="list-unstyled"
        >
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_null_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-0"
              label="choose-an-option"
            >
              choose-an-option
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_null_fieldLabel"
          >
            choose-an-option
          </span>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders options 1`] = `
<div>
  <div
    class="form-group hide"
    tabindex="0"
  >
    <select
      aria-errormessage="undefined_fieldError"
      class="form-control form-control"
      hidden=""
      multiple=""
    >
      <option
        disabled=""
        value=""
      >
        undefined
      </option>
    </select>
    <div
      class="form-builder-select-field input-group-container"
    >
      <div
        aria-labelledby="undefined_placeholderLabel undefined_fieldLabel"
        class="form-control results-chosen select-field-trigger"
        tabindex="0"
      >
        <div
          class="option-selected option-selected-placeholder"
          id="undefined_placeholderLabel"
        >
          choose-an-option
        </div>
        <a
          class="select-arrow-down-container"
        >
          <svg
            class="lexicon-icon lexicon-icon-caret-double"
            role="presentation"
          >
            <use
              xlink:href="#caret-double"
            />
          </svg>
        </a>
      </div>
      <span
        class="sr-only"
        id="undefined_selectedLabel"
      >
        selected
      </span>
      <span
        class="sr-only"
        id="undefined_removeLabel"
      >
        remove
      </span>
    </div>
    <div>
      <div
        class="dropdown-menu ddm-btn-full ddm-select-dropdown"
      >
        <ul
          class="list-unstyled"
        >
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_null_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-0"
              label="choose-an-option"
            >
              choose-an-option
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_null_fieldLabel"
          >
            choose-an-option
          </span>
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_item_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-1"
              label="label"
            >
              label
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_item_fieldLabel"
          >
            label
          </span>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select shows a search input when the number of options is more than the maximum allowed 1`] = `
<div>
  <div
    class="form-group hide"
    tabindex="0"
  >
    <select
      aria-errormessage="undefined_fieldError"
      class="form-control form-control"
      hidden=""
      multiple=""
      size="12"
    >
      <option
        disabled=""
        value=""
      >
        undefined
      </option>
    </select>
    <div
      class="form-builder-select-field input-group-container"
      style=""
    >
      <div
        aria-labelledby="undefined_placeholderLabel undefined_fieldLabel"
        class="form-control results-chosen select-field-trigger multiple-label-list"
        tabindex="0"
      >
        <div
          class="option-selected option-selected-placeholder"
          id="undefined_placeholderLabel"
        >
          choose-options
        </div>
        <a
          class="select-arrow-down-container"
        >
          <svg
            class="lexicon-icon lexicon-icon-caret-double"
            role="presentation"
          >
            <use
              xlink:href="#caret-double"
            />
          </svg>
        </a>
      </div>
      <span
        class="sr-only"
        id="undefined_selectedLabel"
      >
        selected
      </span>
      <span
        class="sr-only"
        id="undefined_removeLabel"
      >
        remove
      </span>
    </div>
    <div>
      <div
        class="dropdown-menu ddm-btn-full ddm-select-dropdown show"
        style="left: -999px; top: -995px;"
      >
        <form
          class=""
        >
          <div
            class="dropdown-section"
          >
            <div
              class="input-group input-group-sm"
            >
              <div
                class="input-group-item"
              >
                <input
                  class="form-control input-group-inset input-group-inset-after"
                  type="text"
                  value=""
                />
                <span
                  class="input-group-inset-item input-group-inset-item-after"
                >
                  <button
                    class="btn btn-unstyled"
                    type="button"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-search"
                      role="presentation"
                    >
                      <use
                        xlink:href="#search"
                      />
                    </svg>
                  </button>
                </span>
              </div>
            </div>
          </div>
        </form>
        <ul
          class="list-unstyled"
        >
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_null_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-0"
              label="choose-an-option"
            >
              <div
                class="custom-control custom-checkbox"
              >
                <label>
                  <input
                    aria-errormessage="undefined_fieldError"
                    aria-labelledby="undefined_null_fieldLabel undefined_fieldLabel"
                    class="custom-control-input"
                    data-testid="labelItem-null"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      choose-an-option
                    </span>
                  </span>
                </label>
              </div>
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_null_fieldLabel"
          >
            choose-an-option
          </span>
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_item1_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-1"
              label="label1"
            >
              <div
                class="custom-control custom-checkbox"
              >
                <label>
                  <input
                    aria-errormessage="undefined_fieldError"
                    aria-labelledby="undefined_item1_fieldLabel undefined_fieldLabel"
                    class="custom-control-input"
                    data-testid="labelItem-item1"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      label1
                    </span>
                  </span>
                </label>
              </div>
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_item1_fieldLabel"
          >
            label1
          </span>
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_item2_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-2"
              label="label2"
            >
              <div
                class="custom-control custom-checkbox"
              >
                <label>
                  <input
                    aria-errormessage="undefined_fieldError"
                    aria-labelledby="undefined_item2_fieldLabel undefined_fieldLabel"
                    class="custom-control-input"
                    data-testid="labelItem-item2"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      label2
                    </span>
                  </span>
                </label>
              </div>
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_item2_fieldLabel"
          >
            label2
          </span>
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_item3_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-3"
              label="label3"
            >
              <div
                class="custom-control custom-checkbox"
              >
                <label>
                  <input
                    aria-errormessage="undefined_fieldError"
                    aria-labelledby="undefined_item3_fieldLabel undefined_fieldLabel"
                    class="custom-control-input"
                    data-testid="labelItem-item3"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      label3
                    </span>
                  </span>
                </label>
              </div>
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_item3_fieldLabel"
          >
            label3
          </span>
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_item4_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-4"
              label="label4"
            >
              <div
                class="custom-control custom-checkbox"
              >
                <label>
                  <input
                    aria-errormessage="undefined_fieldError"
                    aria-labelledby="undefined_item4_fieldLabel undefined_fieldLabel"
                    class="custom-control-input"
                    data-testid="labelItem-item4"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      label4
                    </span>
                  </span>
                </label>
              </div>
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_item4_fieldLabel"
          >
            label4
          </span>
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_item5_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-5"
              label="label5"
            >
              <div
                class="custom-control custom-checkbox"
              >
                <label>
                  <input
                    aria-errormessage="undefined_fieldError"
                    aria-labelledby="undefined_item5_fieldLabel undefined_fieldLabel"
                    class="custom-control-input"
                    data-testid="labelItem-item5"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      label5
                    </span>
                  </span>
                </label>
              </div>
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_item5_fieldLabel"
          >
            label5
          </span>
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_item6_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-6"
              label="label6"
            >
              <div
                class="custom-control custom-checkbox"
              >
                <label>
                  <input
                    aria-errormessage="undefined_fieldError"
                    aria-labelledby="undefined_item6_fieldLabel undefined_fieldLabel"
                    class="custom-control-input"
                    data-testid="labelItem-item6"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      label6
                    </span>
                  </span>
                </label>
              </div>
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_item6_fieldLabel"
          >
            label6
          </span>
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_item7_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-7"
              label="label7"
            >
              <div
                class="custom-control custom-checkbox"
              >
                <label>
                  <input
                    aria-errormessage="undefined_fieldError"
                    aria-labelledby="undefined_item7_fieldLabel undefined_fieldLabel"
                    class="custom-control-input"
                    data-testid="labelItem-item7"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      label7
                    </span>
                  </span>
                </label>
              </div>
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_item7_fieldLabel"
          >
            label7
          </span>
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_item8_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-8"
              label="label8"
            >
              <div
                class="custom-control custom-checkbox"
              >
                <label>
                  <input
                    aria-errormessage="undefined_fieldError"
                    aria-labelledby="undefined_item8_fieldLabel undefined_fieldLabel"
                    class="custom-control-input"
                    data-testid="labelItem-item8"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      label8
                    </span>
                  </span>
                </label>
              </div>
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_item8_fieldLabel"
          >
            label8
          </span>
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_item9_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-9"
              label="label9"
            >
              <div
                class="custom-control custom-checkbox"
              >
                <label>
                  <input
                    aria-errormessage="undefined_fieldError"
                    aria-labelledby="undefined_item9_fieldLabel undefined_fieldLabel"
                    class="custom-control-input"
                    data-testid="labelItem-item9"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      label9
                    </span>
                  </span>
                </label>
              </div>
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_item9_fieldLabel"
          >
            label9
          </span>
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_item10_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-10"
              label="label10"
            >
              <div
                class="custom-control custom-checkbox"
              >
                <label>
                  <input
                    aria-errormessage="undefined_fieldError"
                    aria-labelledby="undefined_item10_fieldLabel undefined_fieldLabel"
                    class="custom-control-input"
                    data-testid="labelItem-item10"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      label10
                    </span>
                  </span>
                </label>
              </div>
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_item10_fieldLabel"
          >
            label10
          </span>
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_item11_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-11"
              label="label11"
            >
              <div
                class="custom-control custom-checkbox"
              >
                <label>
                  <input
                    aria-errormessage="undefined_fieldError"
                    aria-labelledby="undefined_item11_fieldLabel undefined_fieldLabel"
                    class="custom-control-input"
                    data-testid="labelItem-item11"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      label11
                    </span>
                  </span>
                </label>
              </div>
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_item11_fieldLabel"
          >
            label11
          </span>
          <li
            aria-selected="false"
          >
            <button
              aria-labelledby="undefined_item12_fieldLabel undefined_fieldLabel"
              aria-selected="false"
              class="dropdown-item"
              data-testid="dropdownItem-12"
              label="label12"
            >
              <div
                class="custom-control custom-checkbox"
              >
                <label>
                  <input
                    aria-errormessage="undefined_fieldError"
                    aria-labelledby="undefined_item12_fieldLabel undefined_fieldLabel"
                    class="custom-control-input"
                    data-testid="labelItem-item12"
                    type="checkbox"
                  />
                  <span
                    class="custom-control-label"
                  >
                    <span
                      class="custom-control-label-text"
                    >
                      label12
                    </span>
                  </span>
                </label>
              </div>
            </button>
          </li>
          <span
            class="sr-only"
            id="undefined_item12_fieldLabel"
          >
            label12
          </span>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
